# watermark

./: .gitignore  CMakeLists.txt
3thrd/singleton/: singleton-app-gui.cpp  singleton-app-gui.h
app/: CMakeLists.txt
app/common/: common.cmake  log.c  log.h
app/desktop/: desktop-manager.cpp  desktop-manager.h  desktop.cmake  main.cpp  screen.cpp  screen.h  water-mark.cpp  water-mark.h
